fixed ncn from wrapping with a new span class

--- a/ds_judgements_public_ui/sass/includes/_judgment_text.scss
+++ b/ds_judgements_public_ui/sass/includes/_judgment_text.scss
@@ -113,8 +113,11 @@
     text-decoration: underline;
     text-align: right;
 
+    span.ncn-nowrap {
+      white-space: nowrap;
+    }
+
     span {
-      font-weight: bolder;
       display: inline-block;
       text-decoration: underline;
     }
